# raspico2w_playground

./: .clang-format  .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  README.md  compile_commands.json
docs/: CMakeListsメモ.md  code_review_2025-12-13.md  code_review_2025-12-21.md  code_review_2025-12-21_after_fixes.md  pico-sdkを用いる際のcmakelist.md  usb通信_モジュール構造.drawio  vim_cpp_roadmap.md
src/: blink.c
src/app/: dbg_print.c  dbg_print.h  task_test.c  task_test.h
src/control/: usb_comm.c  usb_comm.h
src/include/: FreeRTOSConfig.h  dbg_print.h  ring_buffer.h  rtos_wrapper.h  typedef.h  usb_comm.h
src/rtos/: FreeRTOSConfig.h  freertos_hooks.c  rtos_wrapper.c  rtos_wrapper.h
src/system/: main.c  static_task.c  static_task.h  system_entry.c  system_init.c  system_init.h  typedef.h
src/utils/: ring_buffer.c  ring_buffer.h
